<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/BurlyWood"
    android:orientation="vertical"
    >
    
 <LinearLayout
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="30dp"
    	>  
    	
    	<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/day" 
			android:textColor="@color/Black"
			/>
	
		<EditText  
			android:id="@+id/day"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="30dp" 
		    />
 </LinearLayout>  
 
 <LinearLayout
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="30dp"
    	>  
    	
    	<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/amtask" 
			android:textColor="@color/Black"
			/>
	
		<Button  
			android:id="@+id/am_btn"
			android:layout_width="100dp" 
			android:layout_height="wrap_content"
			android:text="@string/choose"
			android:layout_marginLeft="10dp"
		    />
 </LinearLayout> 
 
 <LinearLayout
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="30dp"
    	>  
    	
    	<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/pmtask" 
			android:textColor="@color/Black"
			/>
	
		<Button  
			android:id="@+id/pm_btn"
			android:layout_width="100dp" 
			android:layout_height="wrap_content"
			android:text="@string/choose"
			android:layout_marginLeft="10dp"
		    />
 </LinearLayout> 
 
 <LinearLayout
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="30dp"
    	>  
    	
    	<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/info" 
			android:textColor="@color/Black"
			/>
	
		<EditText  
			android:id="@+id/info"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="30dp" 
		    />
 </LinearLayout>   
 
    
    <LinearLayout
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_centerHorizontal="true"
    	android:layout_marginTop="30dp"
    	android:layout_gravity="center_horizontal"
    	>   
    	<Button 
			android:text="@string/addthis" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/addthis_btn" 
			/>
	
		<Button
		   	android:id="@+id/clearthis_btn"
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
		   	android:text="@string/clearthis"
		   	android:layout_marginLeft="40dp"
		    />
    </LinearLayout>   
</LinearLayout>
