<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@color/BurlyWood"
    >
    
<TextView 
	android:layout_width="wrap_content" 
	style="@style/title" 
	android:layout_height="wrap_content" 
	android:text="@string/title" 
	android:id="@+id/title" 
	android:layout_alignParentTop="true" 
	android:layout_centerHorizontal="true" 
	android:layout_marginTop="50dp"
	/>
	
<TextView  
	android:id="@+id/intro"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/intro"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_below="@id/title"
    style="@style/intro"
    />
    
    <LinearLayout
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_below="@id/intro"
    	android:layout_centerHorizontal="true"
    	android:layout_marginTop="30dp"
    	>   
    	<Button 
			android:text="@string/view" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/view_btn" 
			/>
	
		<Button
		   	android:id="@+id/add_btn"
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
		   	android:text="@string/add"
		   	android:layout_marginLeft="40dp"
		    />
    </LinearLayout>
    



    
</RelativeLayout>
